<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Vertical_Style"
    android:background="@color/white">

    <!--订单记录-侧边-筛选-->

    <!--筛选条件 1 -->

    <TextView
        android:id="@id/text_1"
        style="@style/Exception_Font_Style"
        android:layout_marginBottom="@dimen/px28"
        android:layout_marginStart="@dimen/px15"
        android:layout_marginTop="@dimen/px33"
        android:text="@string/screen"
        android:textSize="@dimen/px32" />

    <!--分割线-->

    <View
        android:id="@id/line_1"
        style="@style/View_Line_Style"
        android:layout_below="@id/text_1" />


    <!--订单日期 2 -->

    <TextView
        android:id="@id/text_2"
        style="@style/Exception_Font_Style"
        android:layout_below="@id/line_1"
        android:layout_marginBottom="@dimen/px28"
        android:layout_marginStart="@dimen/px42"
        android:layout_marginTop="@dimen/px24"
        android:text="@string/order_date" />

    <!--选择日期-->

    <TextView
        android:id="@id/tv_choice"
        android:layout_width="@dimen/px310"
        android:layout_height="@dimen/px62"
        android:layout_below="@id/text_2"
        android:layout_marginStart="@dimen/px120"
        android:background="@color/gray_bg"
        android:gravity="center"
        android:text="@string/please_choice_date"
        android:textColor="@color/black_font"
        android:textSize="@dimen/px32" />

    <!--支付类型 3 -->

    <TextView
        android:id="@id/text_3"
        style="@style/Exception_Font_Style"
        android:layout_alignStart="@id/text_2"
        android:layout_below="@id/tv_choice"
        android:layout_marginBottom="@dimen/px28"
        android:text="@string/pay_type" />

    <!--微信-->

    <CheckBox
        android:id="@+id/cb_weChat"
        style="@style/Order_Choice_Style"
        android:layout_alignStart="@id/tv_choice"
        android:layout_below="@id/text_3"
        android:text="@string/wechat" />

    <!--支付宝-->

    <CheckBox
        android:id="@+id/cb_aliPay"
        style="@style/Order_Choice_Style"
        android:layout_alignEnd="@id/tv_choice"
        android:layout_below="@id/text_3"
        android:text="@string/alipay" />

    <!--现金-->

    <CheckBox
        android:id="@+id/cb_cash"
        style="@style/Order_Choice_Style"
        android:layout_alignStart="@id/tv_choice"
        android:layout_below="@id/cb_weChat"
        android:layout_marginTop="@dimen/px50"
        android:text="@string/cash" />

    <!--其他-->

    <CheckBox
        android:id="@+id/cb_other"
        style="@style/Order_Choice_Style"
        android:layout_alignEnd="@id/tv_choice"
        android:layout_alignTop="@id/cb_cash"
        android:layout_below="@id/cb_weChat"
        android:text="@string/other" />


    <!--车辆类型 4 -->

    <TextView
        android:id="@id/text_4"
        style="@style/Exception_Font_Style"
        android:layout_alignStart="@id/text_2"
        android:layout_below="@id/cb_cash"
        android:layout_marginBottom="@dimen/px28"
        android:text="@string/car_type" />

    <!--固定车-->

    <CheckBox
        android:id="@+id/cb_fixedCar"
        style="@style/Order_Choice_Style"
        android:layout_alignStart="@id/tv_choice"
        android:layout_below="@id/text_4"
        android:text="@string/fixed_car" />

    <!--临时车-->

    <CheckBox
        android:id="@+id/cb_tempCar"
        style="@style/Order_Choice_Style"
        android:layout_alignEnd="@id/tv_choice"
        android:layout_alignTop="@id/cb_fixedCar"
        android:layout_below="@id/text_4"
        android:text="@string/temp_car" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_reset"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gray_bg"
            android:text="@string/reset"
            android:textColor="@color/black_font"
            android:textSize="@dimen/px36" />

        <Button
            android:id="@id/btn_sure"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_font"
            android:text="@string/ensure"
            android:textColor="@color/white"
            android:textSize="@dimen/px36" />
    </LinearLayout>

</RelativeLayout>