<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout_Match_Vertical_Style">


    <!--商家店铺详情界面-->


    <RelativeLayout
        style="@style/Layout_Wrap_Vertical_White_Style"
        android:layout_height="@dimen/px280">

        <!--商家余额-->

        <TextView
            android:id="@id/text_1"
            style="@style/Business_Font_Black_Style"
            android:layout_width="@dimen/px424"
            android:layout_marginTop="@dimen/px54"
            android:text="@string/business_balance" />

        <TextView
            android:id="@id/tv_balance"
            style="@style/Report_Day_Font_Black_Style"
            android:layout_width="@dimen/px424"
            android:layout_below="@id/text_1"
            android:layout_marginTop="@dimen/px36"
            android:text="@string/app_text" />


        <ImageView
            android:id="@id/line_2"
            style="@style/Order_Image_Style"
            android:layout_height="@dimen/px180"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/text_1"
            android:contentDescription="@string/app_icon" />

        <LinearLayout
            android:layout_width="@dimen/px424"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/tv_balance">

            <TextView
                android:id="@+id/tv_recharge_record"
                style="@style/ImageView_See_Image_Style"
                android:layout_width="@dimen/px106"
                android:text="@string/recharge_record"
                android:textSize="@dimen/px22" />

            <TextView
                android:id="@+id/tv_balance_record"
                style="@style/ImageView_See_Image_Style"
                android:layout_width="@dimen/px166"
                android:layout_marginStart="@dimen/px16"
                android:text="@string/balance_use_record"
                android:textSize="@dimen/px22" />

        </LinearLayout>


        <!--剩余优惠券-->

        <LinearLayout
            android:layout_width="@dimen/px326"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/line_2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@id/text_2"
                style="@style/Business_Font_Black_Style"
                android:layout_width="@dimen/px326"
                android:layout_marginTop="@dimen/px54"
                android:text="@string/surplus_coupons" />


            <TextView
                android:id="@id/tv_coupons"
                style="@style/Report_Day_Font_Black_Style"
                android:layout_width="@dimen/px326"
                android:text="@string/app_text" />


            <TextView
                android:id="@+id/tv_coupons_record"
                style="@style/ImageView_See_Image_Style"
                android:layout_width="@dimen/px166"
                android:layout_marginTop="@dimen/px36"
                android:text="@string/coupons_use_record"
                android:textSize="@dimen/px22" />

        </LinearLayout>


    </RelativeLayout>



    <TextView
        android:id="@id/text_2"
        android:layout_width="@dimen/px690"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px30"
        android:textSize="@dimen/px28"
        android:textColor="@color/gray_font"
        android:text="@string/business_coupons" />


    <!--商家列表-->

    <include layout="@layout/layout_pull" />

</LinearLayout>